# sudoku-puzzle

./: README.md
C++/: CMakeLists.txt
C++/include/: Sudoku.h
C++/src/: Sudoku.cpp  main.cpp
C++/tests/: SudokuTest.cpp  main.cpp  testHelper.h
Go/: go.mod  main.go
Go/solver/: solver.go
Racket/src/: main.rkt  project2-test.rkt  project2-test.rkt~  project2.rkt  project2.rkt~
Racket/src/compiled/drracket/errortrace/: main_rkt.dep  main_rkt.zo  project2_rkt.dep  project2_rkt.zo
Racket/txt/: sudoku-impossible.txt  sudoku-test1-solution.txt  sudoku-test1.txt  sudoku-test2-solution.txt  sudoku-test2.txt
prolog/src/: sudoku.pl  sudoku.plt  sudoku.plt~
prolog/txt/: sudoku-impossible.txt  sudoku-test1-solution.txt  sudoku-test2-solution.txt  sudoku-test2.txt
